# s3-benchmark-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
cli/: local.cmake
cli/include/: local.cmake
cli/include/benchmark/cli/: CliArgs.hpp  CliLogger.hpp
cli/include/s3benchmark/cli/: CliArgs.hpp  CliLogger.hpp
cli/src/: CliLogger.cpp  local.cmake  main.cpp
doc/: aes.txt
latency-test/: plots.r  pretest.csv  read-2.csv  read-3.csv  read-5.csv  read-7.csv
latency-test/128mb/: read-1.csv  read-2.csv  read-3.csv  read-4.csv  read-5.csv  read-6.csv  read-7.csv  read-8.csv
latency-test/16mb/: read-1.csv  read-4.csv  read-6.csv  read-8.csv
latency-test/256mb/: read-1.csv  read-2.csv  read-3.csv  read-4.csv  read-5.csv  read-6.csv  read-7.csv  read-8.csv
latency-test/257mb/: read-1.csv  read-2.csv  read-3.csv  read-4.csv  read-5.csv  read-6.csv  read-7.csv  read-8.csv
lib/: local.cmake
lib/include/: local.cmake
lib/include/benchmark/: Config.hpp  IO.hpp  Logger.hpp  Types.hpp  Util.hpp
lib/include/benchmark/cache/: CacheBenchmark.hpp
lib/include/benchmark/cpu/: CpuBenchmark.hpp
lib/include/benchmark/ram/: RamBenchmark.hpp
lib/include/benchmark/s3/: S3Benchmark.hpp  S3Benchmark.template.cpp  S3Config.hpp  S3Logger.hpp  S3Types.hpp
lib/include/s3benchmark/: Benchmark.hpp  Config.hpp  HttpClient.hpp  Logger.hpp  Types.hpp  Util.hpp
lib/src/: Benchmark.cpp  Config.cpp  HttpClient.cpp  Logger.cpp  S3Benchmark.cpp  local.cmake
lib/src/cache/: CacheBenchmark.cpp  CacheLogger.cpp  CachePrimitives.cpp
lib/src/cpu/: CpuBenchmark.cpp  CpuConfig.cpp  CpuLogger.cpp  CpuPrimitives.cpp
lib/src/ram/: RamBenchmark.cpp  RamConfig.cpp  RamLogger.cpp  RamPrimitives.cpp
lib/src/s3/: S3Benchmark.cpp  S3BenchmarkUring.cpp  S3Config.cpp  S3Logger.cpp  S3Primitives.cpp
scripts/: aws-test  build-docker  build-target  create-compile-commands  rebuild-clean  rebuild-target
test/: HttpClient.cpp  UringTest.cpp  Util.cpp  local.cmake  tester.cpp
